Version 0.3.0~dev

	* Added a token-based (mod_auth_token-style) authorization handler.

Version 0.2.0 Released on 2011/05/24

	* Added graceful stop on SIGHUP.
	* Status handlers are not pluginised (similar to auth handlers).
	* Added a static file status handler.

Version 0.1.0 Released on 2011/05/24

	* Initial release.